--- a/poem.rmd
+++ b/poem.rmd
@@ -39,12 +39,25 @@ Some say the world will end in fire,
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
 
-"The sun was shining on the sea,  
-      Shining with all his might:  
-He did his very best to make. 
-      The billows smooth and bright —  
-And this was odd, because it was. 
-      The middle of the night.  
+The sun was shining on the sea,    
+Shining with all his might:    
+He did his very best to make.  
+The billows smooth and bright    
+And this was odd, because it was.   
+The middle of the night.    
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+
+When the one whose hand you’re holding.   
+Is the one one who holds your heart.   
+When the one whose eyes you gaze into.   
+Gives your hopes and dreams their start,    
+When the one you think of first and last.   
+Is the one who holds you tight,    
+And the things you plan together.   
+Make the whole world seem just right,    
+When the one whom you believe in.   
+Puts their faith and trust in you,    
+You’ve found the one and only love.   
+You’ll share your whole life through.    
